--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,11 @@
+message.change-language=Change language
+message.locale.en=English
+message.locale.ru=Russian
+message.error.403=You don't have permission to access this page.
+message.error.404=Page not found.
+message.error.500=Internal server error.
+message.back=Back
+message.error-page.header=Error
 message.login-page.header=Sign in
 message.login-page.placeholder.login=login
 message.login-page.placeholder.password=password
@@ -5,6 +13,3 @@ message.login-page.button=Login
 message.login-page.signup.text=Don't have an account?
 message.login-page.signup.link=Sign Up
 message.login-page.error=Invalid login or password.
-message.change-language=Change language
-message.locale.en=English
-message.locale.ru=Russian
