--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -1,3 +1,11 @@
+message.change-language=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u044F\u0437\u044B\u043A
+message.locale.en=English
+message.locale.ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+message.error.403=\u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u0434\u043B\u044F \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430 \u0434\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B.
+message.error.404=\u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u0430.
+message.error.500=\u0412\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u044F\u044F \u043E\u0448\u0438\u0431\u043A\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0430.
+message.back=\u041D\u0430\u0437\u0430\u0434
+message.error-page.header=\u041E\u0448\u0438\u0431\u043A\u0430
 message.login-page.header=\u0412\u0445\u043E\u0434
 message.login-page.placeholder.login=\u043B\u043E\u0433\u0438\u043D
 message.login-page.placeholder.password=\u043F\u0430\u0440\u043E\u043B\u044C
@@ -5,6 +13,4 @@ message.login-page.button=\u0412\u043E\u0439\u0442\u0438
 message.login-page.signup.text=\u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430?
 message.login-page.signup.link=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 message.login-page.error=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C.
-message.change-language=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u044F\u0437\u044B\u043A
-message.locale.en=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
-message.locale.ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+
