added i18n for index,registration, request pages and error controller

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,11 +1,38 @@
 message.change-language=Change language
 message.locale.en=English
 message.locale.ru=Russian
+
+message.error-page.header=Error
 message.error.403=You don't have permission to access this page.
 message.error.404=Page not found.
 message.error.500=Internal server error.
+
+message.title=Hotel
+message.edit=Edit
+message.save=Save
+message.create=Create
+message.delete=Delete
+message.signout=Sign out
 message.back=Back
-message.error-page.header=Error
+
+message.hotel.capacity=Capacity
+message.hotel.class=Class
+message.hotel.checkin=Check In
+message.hotel.checkout=Check Out
+message.hotel.status=Status
+message.hotel.new-request=New request
+message.hotel.rooms=Rooms
+
+message.capacity.SINGLE=Single
+message.capacity.DOUBLE=Double
+message.capacity.TRIPLE=Triple
+message.capacity.QUAD=Quad
+
+message.class.ECONOMY=Economy
+message.class.STANDARD=Standard
+message.class.FAMILY=Family
+message.class.LUX=Lux
+
 message.login-page.header=Sign in
 message.login-page.placeholder.login=login
 message.login-page.placeholder.password=password
@@ -13,3 +40,32 @@ message.login-page.button=Login
 message.login-page.signup.text=Don't have an account?
 message.login-page.signup.link=Sign Up
 message.login-page.error=Invalid login or password.
+
+message.index-page.header=Welcome to Hotel
+message.index-page.no-request=You have no requests.
+message.index-page.your-requests=Your requests:
+message.index-page.admin=Admin menu
+
+message.request-page.header.create=Create request
+message.request-page.header.edit=Edit request
+message.request-page.select.capacity=Select capacity:
+message.request-page.select.class=Select class:
+message.request-page.select.checkin=Select check in date:
+message.request-page.select.checkout=Select check out date:
+message.request-page.error.checkin=Check in date should be at least tomorrow.
+message.request-page.error.checkout=Check out date should be after check in date.
+
+message.register-page.header=Create Account
+message.register-page.login=Login
+message.register-page.firstname=First name
+message.register-page.lastname=Last name
+message.register-page.create-password=Create password
+message.register-page.repeat-password=Repeat password
+message.register-page.create-button=Create account
+message.register-page.have-account=Have an account?
+message.register-page.login-link=Log in
+message.register-page.error.login=Login must be at least 5-20 characters long and must contain only letters digits and underscores.
+message.register-page.error.firstname=First name must be at least 3-20 characters long and must contain only letters.
+message.register-page.error.lastname=Last name must be at least 3-20 characters long and must contain only letters.
+message.register-page.error.password=Password must be at least 6 characters long.
+message.register-page.error.confirm=The password and confirm password fields do not match.
