--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,7 @@ message.create=Create
 message.delete=Delete
 message.signout=Sign out
 message.back=Back
+message.find=Find
 
 message.hotel.capacity=Capacity
 message.hotel.class=Class
@@ -33,6 +34,10 @@ message.class.STANDARD=Standard
 message.class.FAMILY=Family
 message.class.LUX=Lux
 
+message.status.NOBILL=In review
+message.status.BILLSENT=Ready to pay
+message.status.PAID=Fully Paid
+
 message.login-page.header=Sign in
 message.login-page.placeholder.login=login
 message.login-page.placeholder.password=password
@@ -45,6 +50,11 @@ message.index-page.header=Welcome to Hotel
 message.index-page.no-request=You have no requests.
 message.index-page.your-requests=Your requests:
 message.index-page.admin=Admin menu
+
+message.admin-page.header=Administration page
+message.admin-page.no-request=There are no active requests
+message.admin-page.user=Back to user menu
+message.admin-page.editrooms=Edit rooms
 
 message.request-page.header.create=Create request
 message.request-page.header.edit=Edit request
