--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -14,6 +14,7 @@ message.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
 message.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 message.signout=\u0412\u044B\u0439\u0442\u0438
 message.back=\u041D\u0430\u0437\u0430\u0434
+message.find=\u041D\u0430\u0439\u0442\u0438
 
 message.hotel.capacity=\u0412\u043C\u0435\u0441\u0442\u0438\u043C\u043E\u0441\u0442\u044C
 message.hotel.class=\u041A\u043B\u0430\u0441\u0441
@@ -33,6 +34,10 @@ message.class.STANDARD=\u0421\u0442\u0430\u043D\u0434\u0430\u0440\u0442
 message.class.FAMILY=\u0421\u0435\u043C\u0435\u0439\u043D\u044B\u0439
 message.class.LUX=\u041B\u044E\u043A\u0441
 
+message.status.NOBILL=\u041D\u0435 \u0440\u0430\u0441\u0441\u043C\u043E\u0442\u0440\u0435\u043D\u043E
+message.status.BILLSENT=\u0413\u043E\u0442\u043E\u0432\u043E \u043A \u043E\u043F\u043B\u0430\u0442\u0435
+message.status.PAID=\u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+
 message.login-page.header=\u0412\u0445\u043E\u0434
 message.login-page.placeholder.login=\u043B\u043E\u0433\u0438\u043D
 message.login-page.placeholder.password=\u043F\u0430\u0440\u043E\u043B\u044C
@@ -45,6 +50,11 @@ message.index-page.header=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u043
 message.index-page.no-request=\u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u0437\u0430\u044F\u0432\u043E\u043A.
 message.index-page.your-requests=\u0412\u0430\u0448\u0438 \u0437\u0430\u044F\u0432\u043A\u0438:
 message.index-page.admin=\u041C\u0435\u043D\u044E \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0430
+
+message.admin-page.header=\u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
+message.admin-page.no-request=\u041D\u0435\u0442 \u0442\u0435\u043A\u0443\u0449\u0438\u0445 \u0437\u0430\u043F\u0440\u043E\u0441\u043E\u0432
+message.admin-page.user=\u041C\u0435\u043D\u044E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+message.admin-page.editrooms=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043A\u043E\u043C\u043D\u0430\u0442\u044B
 
 message.request-page.header.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
 message.request-page.header.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
