Added internationalization of roomseditor.html

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -88,4 +88,10 @@ message.roomslist-page.roomnumber=Room number
 message.roomslist-page.price=Price
 message.roomslist-page.button.home=Back to home page
 
+message.roomseditor-page.header.title=List of hotel rooms <ADMIN PAGE>
+message.roomseditor-page.edit=Edit
+message.roomseditor-page.delete=Delete
+message.roomseditor-page.newroom=New Room
+
+
 
