--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -88,3 +88,8 @@ message.roomslist-page.norooms=\u0412 \u043d\u0430\u0441\u0442\u043e\u044f\u0449
 message.roomslist-page.roomnumber=\u041d\u043e\u043c\u0435\u0440 \u043a\u043e\u043c\u043d\u0430\u0442\u044b
 message.roomslist-page.price=\u0421\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u044c
 message.roomslist-page.button.home=\u041d\u0430 \u0434\u043e\u043c\u0430\u0448\u043d\u044e\u044e \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
+
+message.roomseditor-page.header.title=\u0421\u043f\u0438\u0441\u043e\u043a \u043a\u043e\u043c\u043d\u0430\u0442 <\u0421\u0422\u0420\u0410\u041d\u0418\u0426\u0410 \u0410\u0414\u041c\u0418\u041d\u0418\u0421\u0422\u0420\u0410\u0422\u041e\u0420\u0410>
+message.roomseditor-page.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+message.roomseditor-page.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
+message.roomseditor-page.newroom=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u0443\u044e \u043a\u043e\u043c\u043d\u0430\u0442\u0443
