--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -10,10 +10,15 @@ message.error.500=Internal server error.
 message.title=Hotel
 message.edit=Edit
 message.save=Save
+message.view=View
+message.pay=Pay
+message.cancel=Cancel
 message.create=Create
 message.delete=Delete
 message.signout=Sign out
 message.back=Back
+
+message.payment-status.paid=Paid
 
 message.hotel.capacity=Capacity
 message.hotel.class=Class
@@ -44,6 +49,7 @@ message.login-page.error=Invalid login or password.
 message.index-page.header=Welcome to Hotel
 message.index-page.no-request=You have no requests.
 message.index-page.your-requests=Your requests:
+message.index-page.processed-requests=Processed requests
 message.index-page.admin=Admin menu
 
 message.request-page.header.create=Create request
