--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -10,10 +10,15 @@ message.error.500=\u0412\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u044F\u044F \
 message.title=\u041E\u0442\u0435\u043B\u044C
 message.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+message.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C
+message.pay=\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C
+message.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 message.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
 message.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 message.signout=\u0412\u044B\u0439\u0442\u0438
 message.back=\u041D\u0430\u0437\u0430\u0434
+
+message.payment-status.paid=\u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
 
 message.hotel.capacity=\u0412\u043C\u0435\u0441\u0442\u0438\u043C\u043E\u0441\u0442\u044C
 message.hotel.class=\u041A\u043B\u0430\u0441\u0441
@@ -44,6 +49,7 @@ message.login-page.error=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0435 \u0438
 message.index-page.header=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C \u0432 \u043E\u0442\u0435\u043B\u044C
 message.index-page.no-request=\u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u0437\u0430\u044F\u0432\u043E\u043A.
 message.index-page.your-requests=\u0412\u0430\u0448\u0438 \u0437\u0430\u044F\u0432\u043A\u0438:
+message.index-page.processed-requests=\u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D\u043D\u044B\u0435 \u0437\u0430\u044F\u0432\u043A\u0438:
 message.index-page.admin=\u041C\u0435\u043D\u044E \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0430
 
 message.request-page.header.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
