--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,10 +2,16 @@ message.change-language=Change language
 message.locale.en=English
 message.locale.ru=Russian
 
-message.error-page.header=Error
+message.error-page.header.403 =Error 403
+message.error-page.header.404 =Error 404
+message.error-page.header.500 =Error 403
+message.error-page.header.405=Error 405
+message.error-page.header.roomexists =Error of creation
 message.error.403=You don't have permission to access this page.
 message.error.404=Page not found.
+message.error.405=Resource not allowed
 message.error.500=Internal server error.
+message.error.roomexists=Creation of new room failed. Room with this room number already exists.
 
 message.title=Hotel
 message.edit=Edit
