exception handling provided

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -7,11 +7,13 @@ message.error-page.header.404 =Error 404
 message.error-page.header.500 =Error 403
 message.error-page.header.405=Error 405
 message.error-page.header.roomexists =Error of creation
+message.error-page.header.busylogin=Registration error
 message.error.403=You don't have permission to access this page.
 message.error.404=Page not found.
 message.error.405=Resource not allowed
 message.error.500=Internal server error.
 message.error.roomexists=Creation of new room failed. Room with this room number already exists.
+message.error.busylogin=Sorry, this login is taken. Pick another one.
 
 message.title=Hotel
 message.edit=Edit
@@ -114,6 +116,7 @@ message.roomseditor-page.header.title=List of hotel rooms <ADMIN PAGE>
 message.roomseditor-page.edit=Edit
 message.roomseditor-page.delete=Delete
 message.roomseditor-page.newroom=New Room
+
 
 
 
