--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -59,6 +59,7 @@ message.login-page.error=Invalid login or password.
 
 message.index-page.header=Welcome to Hotel
 message.index-page.no-request=You have no requests.
+message.index-page.no-unprocessed-request=You have no unprocessed requests.
 message.index-page.your-requests=Your requests:
 message.index-page.processed-requests=Processed requests
 message.index-page.admin=Admin menu
@@ -114,6 +115,11 @@ message.roomseditor-page.header.title=List of hotel rooms <ADMIN PAGE>
 message.roomseditor-page.edit=Edit
 message.roomseditor-page.delete=Delete
 message.roomseditor-page.newroom=New Room
+
+message.viewreservation-page.header=View request
+message.viewreservation-page.your-request=Your request:
+message.viewreservation-page.proposed-room=Proposed room:
+message.viewreservation-page.confirm-message=Are you sure you want to pay this request?
 
 
 
