Added internationalization of fitting rooms

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -128,6 +128,13 @@ message.viewreservation-page.your-request=Your request:
 message.viewreservation-page.proposed-room=Proposed room:
 message.viewreservation-page.confirm-message=Are you sure you want to pay this request?
 
+message.fittingrooms-page.header=Possible rooms
+message.fittingrooms-page.nofitting=There are no rooms that will suit the request
+message.fittingrooms-page.roomnumber=Room number
+message.fittingrooms-page.price=Price
+message.fittingrooms-page.pick=Pick Room
+message.fittingrooms-page.button.submit=Submit
+
 
 
 
