--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -127,3 +127,10 @@ message.viewreservation-page.header=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u
 message.viewreservation-page.your-request=\u0412\u0430\u0448\u0430 \u0437\u0430\u044F\u0432\u043A\u0430:
 message.viewreservation-page.proposed-room=\u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430:
 message.viewreservation-page.confirm-message=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443?
+
+message.fittingrooms-page.header=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u044b\u0435 \u043a\u043e\u043c\u043d\u0430\u0442\u044b
+message.fittingrooms-page.nofitting=\u041d\u0438 \u043e\u0434\u043d\u043e\u0439 \u043a\u043e\u043c\u043d\u0430\u0442\u044b \u043d\u0435 \u0443\u0434\u043e\u0432\u043b\u0435\u0442\u0432\u043e\u0440\u044f\u0435\u0442 \u0437\u0430\u043f\u0440\u043e\u0441\u0443
+message.fittingrooms-page.roomnumber=\u041d\u043e\u043c\u0435\u0440 \u043a\u043e\u043c\u043d\u0430\u0442\u044b
+message.fittingrooms-page.price=\u0421\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u044c
+message.fittingrooms-page.pick=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u043a\u043e\u043c\u043d\u0430\u0442\u0443
+message.fittingrooms-page.button.submit=\u0412\u044b\u0431\u0440\u0430\u0442\u044c
