Removed unused dao methods, gradle dependencies, added remaining internationalization

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -75,6 +75,7 @@ message.admin-page.user=Back to user menu
 message.admin-page.editrooms=Edit rooms
 message.admin-page.pending=Pending requests
 message.admin-page.approved=Approved requests
+message.admin-page.approve=Request approved
 
 message.request-page.header.create=Create request
 message.request-page.header.edit=Edit request
