--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,7 +66,7 @@ message.index-page.header=Welcome to Hotel
 message.index-page.no-request=You have no requests.
 message.index-page.no-unprocessed-request=You have no unprocessed requests.
 message.index-page.your-requests=Your requests:
-message.index-page.processed-requests=Processed requests
+message.index-page.processed-requests=Processed requests:
 message.index-page.admin=Admin menu
 
 message.admin-page.header=Administration page
