added reservation entity

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -124,10 +124,10 @@ message.roomseditor-page.edit=Edit
 message.roomseditor-page.delete=Delete
 message.roomseditor-page.newroom=New Room
 
-message.viewreservation-page.header=View request
-message.viewreservation-page.your-request=Your request:
-message.viewreservation-page.proposed-room=Proposed room:
-message.viewreservation-page.confirm-message=Are you sure you want to pay this request?
+message.view-request.header=View request
+message.view-request.your-request=Your request:
+message.view-request.proposed-room=Proposed room:
+message.view-request.confirm-message=Are you sure you want to pay this request?
 
 message.fittingrooms-page.header=Possible rooms
 message.fittingrooms-page.nofitting=There are no rooms that will suit the request
