--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -123,10 +123,11 @@ message.roomseditor-page.header.title=\u0421\u043F\u0438\u0441\u043E\u043A \u043
 message.roomseditor-page.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.roomseditor-page.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 message.roomseditor-page.newroom=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u0443\u044E \u043A\u043E\u043C\u043D\u0430\u0442\u0443
-message.viewreservation-page.header=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0437\u0430\u044F\u0432\u043A\u0438
-message.viewreservation-page.your-request=\u0412\u0430\u0448\u0430 \u0437\u0430\u044F\u0432\u043A\u0430:
-message.viewreservation-page.proposed-room=\u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430:
-message.viewreservation-page.confirm-message=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443?
+
+message.view-request.header=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0437\u0430\u044F\u0432\u043A\u0438
+message.view-request.your-request=\u0412\u0430\u0448\u0430 \u0437\u0430\u044F\u0432\u043A\u0430:
+message.view-request.proposed-room=\u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0435\u043D\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430:
+message.view-request.confirm-message=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443?
 
 message.fittingrooms-page.header=\u0412\u043E\u0437\u043C\u043E\u0436\u043D\u044B\u0435 \u043A\u043E\u043C\u043D\u0430\u0442\u044B
 message.fittingrooms-page.nofitting=\u041D\u0438 \u043E\u0434\u043D\u043E\u0439 \u043A\u043E\u043C\u043D\u0430\u0442\u044B \u043D\u0435 \u0443\u0434\u043E\u0432\u043B\u0435\u0442\u0432\u043E\u0440\u044F\u0435\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0443
