--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,9 +50,10 @@ message.class.STANDARD=Standard
 message.class.FAMILY=Family
 message.class.LUX=Lux
 
-message.status.NOBILL=In review
 message.status.BILLSENT=Ready to pay
 message.status.PAID=Fully Paid
+message.status.CANCELLED=Cancelled
+message.status.DENIED=Denied
 
 message.login-page.header=Sign in
 message.login-page.placeholder.login=login
