--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -50,9 +50,10 @@ message.class.STANDARD=\u0421\u0442\u0430\u043D\u0434\u0430\u0440\u0442
 message.class.FAMILY=\u0421\u0435\u043C\u0435\u0439\u043D\u044B\u0439
 message.class.LUX=\u041B\u044E\u043A\u0441
 
-message.status.NOBILL=\u041D\u0435 \u0440\u0430\u0441\u0441\u043C\u043E\u0442\u0440\u0435\u043D\u043E
 message.status.BILLSENT=\u0413\u043E\u0442\u043E\u0432\u043E \u043A \u043E\u043F\u043B\u0430\u0442\u0435
 message.status.PAID=\u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+message.status.CANCELLED=\u041E\u0442\u043C\u0435\u043D\u0435\u043D\u043E
+message.status.DENIED=\u041E\u0442\u043A\u043B\u043E\u043D\u0435\u043D\u043E
 
 message.login-page.header=\u0412\u0445\u043E\u0434
 message.login-page.placeholder.login=\u043B\u043E\u0433\u0438\u043D
