added deny request with field of reason

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,6 +26,7 @@ message.delete=Delete
 message.signout=Sign out
 message.back=Back
 message.find=Find
+message.deny=Deny
 
 message.payment-status.paid=Paid
 
