--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,3 +137,4 @@ message.fittingrooms-page.price=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442
 message.fittingrooms-page.pick=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043A\u043E\u043C\u043D\u0430\u0442\u0443
 message.fittingrooms-page.button.submit=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 message.admin-page.approve=\u0417\u0430\u044F\u0432\u043A\u0430 \u043E\u0434\u043E\u0431\u0440\u0435\u043D\u0430
+message.deny=Отклонить
