Added denied requests view to admin page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,6 +40,7 @@ message.hotel.rooms=Rooms
 message.hotel.room=Room #
 message.hotel.firstname=Name
 message.hotel.lastname=Last name
+message.hotel.reason=Reason of denial
 
 message.capacity.SINGLE=Single
 message.capacity.DOUBLE=Double
@@ -77,6 +78,7 @@ message.admin-page.user=Back to user menu
 message.admin-page.editrooms=Edit rooms
 message.admin-page.pending=Pending requests
 message.admin-page.approved=Approved requests
+message.admin-page.denied=Denied requests
 message.admin-page.approve=Request approved
 
 message.request-page.header.create=Create request
