--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -138,3 +138,5 @@ message.fittingrooms-page.pick=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043A
 message.fittingrooms-page.button.submit=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 message.admin-page.approve=\u0417\u0430\u044F\u0432\u043A\u0430 \u043E\u0434\u043E\u0431\u0440\u0435\u043D\u0430
 message.deny=Отклонить
+message.hotel.reason=Причина отказа
+message.admin-page.denied=Отклоненные запросы
