Added user menu (only list of users)

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -140,3 +140,8 @@ message.admin-page.approve=\u0417\u0430\u044F\u0432\u043A\u0430 \u043E\u0434\u04
 message.deny=Отклонить
 message.hotel.reason=Причина отказа
 message.admin-page.denied=Отклоненные запросы
+message.admin-page.users=Список всех пользователей
+message.admin-page.no-users=Нет пользователей в базе данных
+message.admin-page.back-to-admin=Вернуться в меню администратора
+message.admin-page.usersmenu=Пользователи
+message.hotel.permission=Уровень доступа
