--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -41,6 +41,7 @@ message.hotel.room=Room #
 message.hotel.firstname=Name
 message.hotel.lastname=Last name
 message.hotel.reason=Reason of denial
+message.hotel.permission=Permission level
 
 message.capacity.SINGLE=Single
 message.capacity.DOUBLE=Double
@@ -80,6 +81,10 @@ message.admin-page.pending=Pending requests
 message.admin-page.approved=Approved requests
 message.admin-page.denied=Denied requests
 message.admin-page.approve=Request approved
+message.admin-page.usersmenu=Users
+message.admin-page.users=List of all users
+message.admin-page.no-users=There are no users in database
+message.admin-page.back-to-admin=Back to admin menu
 
 message.request-page.header.create=Create request
 message.request-page.header.edit=Edit request
