Updates for entities

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -115,7 +115,7 @@ message.rooms-page.button.save=Save
 message.rooms-page.button.create=Create
 
 message.roomslist-page.header.title=List of hotel rooms
-message.roomslist-page.norooms=There is no rooms for booking in hotel now
+message.roomslist-page.norooms=There are no rooms for booking in hotel now
 message.roomslist-page.roomnumber=Room number
 message.roomslist-page.price=Price
 message.roomslist-page.button.home=Back to home page
