--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,6 +27,7 @@ message.signout=Sign out
 message.back=Back
 message.find=Find
 message.deny=Deny
+message.block=Block
 
 message.payment-status.paid=Paid
 
@@ -42,6 +43,13 @@ message.hotel.firstname=Name
 message.hotel.lastname=Last name
 message.hotel.reason=Reason of denial
 message.hotel.permission=Permission level
+message.hotel.login=Login
+
+message.blockstatus.BLOCKED=Block
+message.blockstatus.UNBLOCKED=Unblock
+
+message.permission.ADMIN=Admin
+message.permission.USER=User
 
 message.capacity.SINGLE=Single
 message.capacity.DOUBLE=Double
