--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -45,8 +45,8 @@ message.hotel.reason=Reason of denial
 message.hotel.permission=Permission level
 message.hotel.login=Login
 
-message.blockstatus.BLOCKED=Block
-message.blockstatus.UNBLOCKED=Unblock
+message.blockstatus.BLOCKED=Unblock
+message.blockstatus.UNBLOCKED=Block
 
 message.permission.ADMIN=Admin
 message.permission.USER=User
@@ -72,7 +72,7 @@ message.login-page.placeholder.password=password
 message.login-page.button=Login
 message.login-page.signup.text=Don't have an account?
 message.login-page.signup.link=Sign Up
-message.login-page.error=Invalid login or password.
+message.login-page.error=Invalid login or password or your account has been blocked.
 
 message.index-page.header=Welcome to Hotel
 message.index-page.no-request=You have no requests.
