javascript deny menu

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -85,6 +85,7 @@ message.admin-page.usersmenu=Users
 message.admin-page.users=List of all users
 message.admin-page.no-users=There are no users in database
 message.admin-page.back-to-admin=Back to admin menu
+message.admin-page.enter-reason=Please enter deny reason
 
 message.request-page.header.create=Create request
 message.request-page.header.edit=Edit request
