--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -76,6 +76,7 @@ message.admin-page.user=\u041C\u0435\u043D\u044E \u043F\u043E\u043B\u044C\u0437\
 message.admin-page.editrooms=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043A\u043E\u043C\u043D\u0430\u0442\u044B
 message.admin-page.pending=\u041D\u0435\u0440\u0430\u0441\u0441\u043C\u043E\u0442\u0440\u0435\u043D\u043D\u044B\u0435 \u0437\u0430\u044F\u0432\u043A\u0438
 message.admin-page.approved=\u041E\u0434\u043E\u0431\u0440\u0435\u043D\u043D\u044B\u0435 \u0437\u0430\u044F\u0432\u043A\u0438
+message.admin-page.enter-reason=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u0440\u0438\u0447\u0438\u043D\u0443 \u043E\u0442\u043A\u0430\u0437\u0430
 
 message.request-page.header.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
 message.request-page.header.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
@@ -137,11 +138,11 @@ message.fittingrooms-page.price=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442
 message.fittingrooms-page.pick=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043A\u043E\u043C\u043D\u0430\u0442\u0443
 message.fittingrooms-page.button.submit=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 message.admin-page.approve=\u0417\u0430\u044F\u0432\u043A\u0430 \u043E\u0434\u043E\u0431\u0440\u0435\u043D\u0430
-message.deny=Отклонить
-message.hotel.reason=Причина отказа
-message.admin-page.denied=Отклоненные запросы
-message.admin-page.users=Список всех пользователей
-message.admin-page.no-users=Нет пользователей в базе данных
-message.admin-page.back-to-admin=Вернуться в меню администратора
-message.admin-page.usersmenu=Пользователи
-message.hotel.permission=Уровень доступа
+message.deny=\u041E\u0442\u043A\u043B\u043E\u043D\u0438\u0442\u044C
+message.hotel.reason=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043A\u0430\u0437\u0430
+message.admin-page.denied=\u041E\u0442\u043A\u043B\u043E\u043D\u0435\u043D\u043D\u044B\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u044B
+message.admin-page.users=\u0421\u043F\u0438\u0441\u043E\u043A \u0432\u0441\u0435\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
+message.admin-page.no-users=\u041D\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439 \u0432 \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445
+message.admin-page.back-to-admin=\u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u0432 \u043C\u0435\u043D\u044E \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0430
+message.admin-page.usersmenu=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+message.hotel.permission=\u0423\u0440\u043E\u0432\u0435\u043D\u044C \u0434\u043E\u0441\u0442\u0443\u043F\u0430
