improved index page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-message.change-language=Change language
+message.change-language=Language
 message.locale.en=English
 message.locale.ru=Russian
 
@@ -75,10 +75,12 @@ message.login-page.signup.link=Sign Up
 message.login-page.error=Invalid login or password or your account has been blocked.
 
 message.index-page.header=Welcome to Hotel
-message.index-page.no-request=You have no requests.
+message.index-page.no-request=You have no pending requests.
 message.index-page.no-unprocessed-request=You have no unprocessed requests.
-message.index-page.your-requests=Your requests:
-message.index-page.processed-requests=Processed requests:
+message.index-page.no-processed-requests=You have no approved requests.
+message.index-page.your-requests=Pending requests
+message.index-page.no-denied-requests=You have no denied requests.
+message.index-page.processed-requests=Approved requests
 message.index-page.admin=Admin menu
 
 message.admin-page.header=Administration page
