fixed pagination when blocking or deleting user

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -92,6 +92,7 @@ message.admin-page.approve=Request approved
 message.admin-page.usersmenu=Users
 message.admin-page.users=List of all users
 message.admin-page.no-users=There are no users in database
+message.admin-page.not-enough-users=Not enough users for selected page
 message.admin-page.back-to-admin=Back to admin menu
 message.admin-page.enter-reason=Please enter deny reason
 
