--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,6 +44,7 @@ message.hotel.lastname=Last name
 message.hotel.reason=Reason of denial
 message.hotel.permission=Permission level
 message.hotel.login=Login
+message.hotel.new-room=New Room
 
 message.blockstatus.BLOCKED=Unblock
 message.blockstatus.UNBLOCKED=Block
@@ -143,7 +144,7 @@ message.roomslist-page.button.home=Back to home page
 message.roomseditor-page.header.title=List of hotel rooms <ADMIN PAGE>
 message.roomseditor-page.edit=Edit
 message.roomseditor-page.delete=Delete
-message.roomseditor-page.newroom=New Room
+
 
 message.view-request.header=View request
 message.view-request.your-request=Your request:
