--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -39,6 +39,7 @@ message.hotel.rooms=\u041A\u043E\u043C\u043D\u0430\u0442\u044B
 message.hotel.room=\u041A\u043E\u043C\u043D\u0430\u0442\u0430
 message.hotel.firstname=\u0418\u043C\u044F
 message.hotel.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+message.hotel.new-room=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u0443\u044E \u043A\u043E\u043C\u043D\u0430\u0442\u0443
 
 message.capacity.SINGLE=\u041E\u0434\u043D\u043E\u043C\u0435\u0441\u0442\u043D\u044B\u0439
 message.capacity.DOUBLE=\u0414\u0432\u0443\u0445\u043C\u0435\u0441\u0442\u043D\u044B\u0439
@@ -126,7 +127,7 @@ message.roomslist-page.button.home=\u041D\u0430 \u0434\u043E\u043C\u0430\u0448\u
 message.roomseditor-page.header.title=\u0421\u043F\u0438\u0441\u043E\u043A \u043A\u043E\u043C\u043D\u0430\u0442 <\u0421\u0422\u0420\u0410\u041D\u0418\u0426\u0410 \u0410\u0414\u041C\u0418\u041D\u0418\u0421\u0422\u0420\u0410\u0422\u041E\u0420\u0410>
 message.roomseditor-page.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.roomseditor-page.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
-message.roomseditor-page.newroom=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u0443\u044E \u043A\u043E\u043C\u043D\u0430\u0442\u0443
+
 
 message.view-request.header=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0437\u0430\u044F\u0432\u043A\u0438
 message.view-request.your-request=\u0412\u0430\u0448\u0430 \u0437\u0430\u044F\u0432\u043A\u0430:
