Style of index and admin pages is correct and identical

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,7 +24,7 @@ message.cancel=Cancel
 message.create=Create
 message.delete=Delete
 message.signout=Sign out
-message.back=Back
+message.back=Back to previous page
 message.find=Find
 message.deny=Deny
 message.block=Block
@@ -82,17 +82,17 @@ message.index-page.no-processed-requests=You have no approved requests.
 message.index-page.your-requests=Pending requests
 message.index-page.no-denied-requests=You have no denied requests.
 message.index-page.processed-requests=Approved requests
-message.index-page.admin=Admin menu
+message.index-page.admin=Switch Admin Mode
 
 message.admin-page.header=Administration page
 message.admin-page.no-request=There are no active requests
-message.admin-page.user=Back to user menu
+message.admin-page.user=Switch User Mode
 message.admin-page.editrooms=Edit rooms
 message.admin-page.pending=Pending requests
 message.admin-page.approved=Approved requests
 message.admin-page.denied=Denied requests
 message.admin-page.approve=Request approved
-message.admin-page.usersmenu=Users
+message.admin-page.usersmenu=Manage users
 message.admin-page.users=List of all users
 message.admin-page.no-users=There are no users in database
 message.admin-page.not-enough-users=Not enough users for selected page
