--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -134,6 +134,7 @@ message.rooms-page.button.back=Back to the list of rooms
 message.rooms-page.header.edit=Edit Room
 message.rooms-page.button.save=Save
 message.rooms-page.button.create=Create
+message.rooms-page.id=ID
 
 message.roomslist-page.header.title=List of hotel rooms
 message.roomslist-page.norooms=There are no rooms for booking in hotel now
