--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -119,6 +119,7 @@ message.rooms-page.button.back=\u041D\u0430\u0437\u0430\u0434 \u043A \u0441\u043
 message.rooms-page.header.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043A\u043E\u043C\u043D\u0430\u0442\u0443
 message.rooms-page.button.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 message.rooms-page.button.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+message.rooms-page.id=ID
 
 message.roomslist-page.header.title=\u0421\u043F\u0438\u0441\u043E\u043A \u043A\u043E\u043C\u043D\u0430\u0442
 message.roomslist-page.norooms=\u0412 \u043D\u0430\u0441\u0442\u043E\u044F\u0449\u0435\u0435 \u0432\u0440\u0435\u043C\u044F \u043E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u044E\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0434\u043B\u044F \u0431\u0440\u043E\u043D\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u044B \u043E\u0442\u0435\u043B\u044F
