--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -140,7 +140,9 @@ message.roomslist-page.header.title=List of hotel rooms
 message.roomslist-page.norooms=There are no rooms for booking in hotel now
 message.roomslist-page.roomnumber=Room number
 message.roomslist-page.price=Price
-message.roomslist-page.button.home=Back to home page
+message.roomslist-page.button.home=To home page
+message.button.admin-menu=Back to admin page
+message.button.user-menu=Back to user page
 
 message.roomseditor-page.header.title=List of hotel rooms <ADMIN PAGE>
 message.roomseditor-page.edit=Edit
