--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -163,3 +163,17 @@ message.block=\u0411\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.blockstatus.UNBLOCKED=\u0420\u0430\u0437\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.blockstatus.BLOCKED=\u0411\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 message.admin-page.not-enough-users=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439 \u0434\u043B\u044F \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B
+message.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+message.profile-page.new-password=\u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+message.profile-page.current-password=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+message.profile-page.submit-button=\u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
+message.profile-page.header=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u043E\u0444\u0438\u043B\u044C
+message.profile-page.edit.login=\u0412\u0430\u0448 \u043B\u043E\u0433\u0438\u043D
+message.profile-page.edit.first-name=\u0418\u043C\u044F
+message.profile-page.edit.last-name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+message.profile-page.edit.current-password=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+message.profile-page.edit.new-password=\u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+message.profile-page.edit.confirm-password=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+message.error-page.header.passwordDoesNotMatch=\u041E\u0448\u0438\u0431\u043A\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+message.error.passwordDoesNotMatch=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C \u0432\u0432\u0435\u0434\u0435\u043D \u043D\u0435 \u0432\u0435\u0440\u043D\u043E
+message.success=\u0423\u0441\u043F\u0435\u0448\u043D\u043E!
