admin page front

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,10 +2,7 @@ message.change-language=Language
 message.locale.en=English
 message.locale.ru=Russian
 
-message.error-page.header.403 =Error 403
-message.error-page.header.404 =Error 404
-message.error-page.header.500 =Error 403
-message.error-page.header.405=Error 405
+message.error-page.header =Error
 message.error-page.header.roomexists =Error of creation
 message.error-page.header.busylogin=Registration error
 message.error.403=You don't have permission to access this page.
