--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,10 +2,7 @@ message.change-language=\u042F\u0437\u044B\u043A
 message.locale.en=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
 message.locale.ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
 
-message.error-page.header.403 =\u041E\u0448\u0438\u0431\u043A\u0430 403
-message.error-page.header.404 =\u041E\u0448\u0438\u0431\u043A\u0430 404
-message.error-page.header.500 =\u041E\u0448\u0438\u0431\u043A\u0430 500
-message.error-page.header.405=\u041E\u0448\u0438\u0431\u043A\u0430 405
+message.error-page.header =\u041E\u0448\u0438\u0431\u043A\u0430
 message.error-page.header.roomexists =\u041E\u0448\u0438\u0431\u043A\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
 message.error-page.header.busylogin=\u041E\u0448\u0438\u0431\u043A\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
 message.error.403=\u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u0434\u043B\u044F \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430 \u0434\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B.
