--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -178,3 +178,4 @@ message.profile-page.edit.confirm-password=Confirm new password
 message.error-page.header.passwordDoesNotMatch=Updating error
 message.error.passwordDoesNotMatch=Current password doesn't match
 message.success=Success!
+message.profile-page.change-password=Change password
