--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -180,3 +180,4 @@ message.profile-page.edit.confirm-password=\u041F\u043E\u0434\u0442\u0432\u0435\
 message.error-page.header.passwordDoesNotMatch=\u041E\u0448\u0438\u0431\u043A\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 message.error.passwordDoesNotMatch=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C \u0432\u0432\u0435\u0434\u0435\u043D \u043D\u0435 \u0432\u0435\u0440\u043D\u043E
 message.success=\u0423\u0441\u043F\u0435\u0448\u043D\u043E!
+message.profile-page.change-password=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
