--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -99,7 +99,7 @@ message.admin-page.not-enough-users=Not enough users for selected page
 message.admin-page.back-to-admin=Back to admin menu
 message.admin-page.enter-reason=Please enter deny reason
 message-admin-page.current-residents=Current residents
-message-admin-page.current-residents-menu=In a hotel
+message-admin-page.current-residents-menu=Current residents
 message.admin-page.no-users-today=Nobody resides in a hotel right now
 
 message.request-page.header.create=Create request
