--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -84,7 +84,7 @@ message.admin-page.denied=\u041E\u0442\u043A\u043B\u043E\u043D\u0435\u043D\u043D
 message.admin-page.enter-reason=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u0440\u0438\u0447\u0438\u043D\u0443 \u043E\u0442\u043A\u0430\u0437\u0430
 message.admin-page.not-enough-users=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439 \u0434\u043B\u044F \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B
 message-admin-page.current-residents=\u041F\u0440\u043E\u0436\u0438\u0432\u0430\u044E\u0449\u0438\u0435 \u0432 \u043E\u0442\u0435\u043B\u0435
-message-admin-page.current-residents-menu=\u0412 \u043E\u0442\u0435\u043B\u0435
+message-admin-page.current-residents-menu=\u041F\u0440\u043E\u0436\u0438\u0432\u0430\u044E\u0449\u0438\u0435 \u0432 \u043E\u0442\u0435\u043B\u0435
 message.admin-page.no-users-today=\u0412 \u0434\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u043C\u0435\u043D\u0442 \u0432 \u043E\u0442\u0435\u043B\u0435 \u043D\u0435\u0442 \u043F\u043E\u0441\u0435\u0442\u0438\u0442\u0435\u043B\u0435\u0439
 
 
@@ -163,5 +163,5 @@ message.permission.USER=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u
 message.permission.ADMIN=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 message.hotel.login=\u041B\u043E\u0433\u0438\u043D
 message.block=\u0411\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-message.blockstatus.UNBLOCKED=\u0420\u0430\u0437\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-message.blockstatus.BLOCKED=\u0411\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+message.blockstatus.UNBLOCKED=\u0411\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+message.blockstatus.BLOCKED=\u0420\u0430\u0437\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
