front final version

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -108,6 +108,8 @@ message.request-page.select.checkin=Select check in date:
 message.request-page.select.checkout=Select check out date:
 message.request-page.error.checkin=Check in date should be at least tomorrow.
 message.request-page.error.checkout=Check out date should be after check in date.
+message.request-page.current-request=Current request:
+message.request-page.suitable-rooms=Suitable rooms:
 
 message.register-page.header=Create Account
 message.register-page.login=Login
