error message fix

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -176,4 +176,4 @@ message.profile-page.edit.new-password=New password
 message.profile-page.edit.confirm-password=Confirm new password
 message.success=Success!
 message.profile-page.change-password=Change password
-message.error.in\ password=Current password doesn't match
+message.error.418=Current password doesn't match
