--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -176,7 +176,7 @@ message.profile-page.edit.new-password=\u041D\u043E\u0432\u044B\u0439 \u043F\u04
 message.profile-page.edit.confirm-password=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
 message.success=\u0423\u0441\u043F\u0435\u0448\u043D\u043E!
 message.profile-page.change-password=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
-message.error.in\ password=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C \u0432\u0432\u0435\u0434\u0435\u043D \u043D\u0435 \u0432\u0435\u0440\u043D\u043E
+message.error.418=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C \u0432\u0432\u0435\u0434\u0435\u043D \u043D\u0435 \u0432\u0435\u0440\u043D\u043E
 
 message.request-page.current-request=\u0422\u0435\u043A\u0443\u0449\u0430\u044F \u0437\u0430\u044F\u0432\u043A\u0430:
 message.request-page.suitable-rooms=\u041F\u043E\u0434\u0445\u043E\u0434\u044F\u0449\u0438\u0435 \u043A\u043E\u043C\u043D\u0430\u0442\u044B:
