--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,7 +9,7 @@ message.error.403=You don't have permission to access this page.
 message.error.404=Page not found.
 message.error.405=Resource not allowed
 message.error.500=Internal server error.
-message.error.roomexists=Creation of new room failed. Room with this room number already exists.
+message.error.423=Creation of new room failed. Room with this room number already exists.
 message.error.busylogin=Sorry, this login is taken. Pick another one.
 
 message.title=Hotel
